--- a/scss/index.scss
+++ b/scss/index.scss
@@ -56,7 +56,7 @@
 	grid-row: 4 / 9;
 	grid-column: 2;
 	background: variables.$dark-red;
-	color: variables.$text-black;
+	color: variables.$text-white;
 	font-weight: 700;
 }
 
@@ -75,14 +75,15 @@
 .quote3 {
 	grid-row: 5;
 	grid-column: 3 / 5;
-	padding-block: variables.$space-2;
+	padding-block: variables.$space-2 0;
 	padding-inline: variables.$space-2 0;
 	text-align: right;
 }
 
 .attribution {
 	grid-row: 6;
-	grid-column: 3 / 5;
+	grid-column: 4;
+	padding-block-end: variables.$space-2;
 	font-size: variables.$fs-title-md;
 	text-align: right;
 }
@@ -91,8 +92,7 @@
 	grid-row: 2;
 	grid-column: 4;
 	justify-self: flex-end;
-	padding-block: variables.$space-2 0;
-	padding-inline: 0;
+	padding-inline-end: variables.$space-2;
 	writing-mode: vertical-rl;
 
 	strong {
@@ -125,7 +125,6 @@
 
 .bars {
 	display: flex;
-	flex-grow: 1;
 	justify-content: space-around;
 	align-items: flex-end;
 	block-size: 100%;
@@ -156,9 +155,8 @@
 /* stylelint-disable-next-line media-feature-name-no-unknown */
 @media screen and (width >= variables.$screen-tablet) {
 	.uppercase {
-		grid-column: 4 / 6;
-		justify-self: flex-start;
-		padding-inline-start: variables.$space-20;
+		padding-inline-end: 0;
+		padding-block-end: variables.$space-2;
 		writing-mode: horizontal-tb;
 	}
 
@@ -170,6 +168,7 @@
 	.numbers {
 		grid-row: 6;
 		grid-column: 3;
+		padding-inline: variables.$space-2;
 		writing-mode: horizontal-tb;
 	}
 
@@ -180,6 +179,10 @@
 
 /* stylelint-disable-next-line media-feature-name-no-unknown */
 @media screen and (width >= variables.$screen-desktop) {
+	html {
+		overflow: hidden;
+	}
+
 	body {
 		overflow: hidden;
 		block-size: 100vh;
